# BSUIR

./: README.md
MCiCvIT/Lab1/: CMakeLists.txt  lw_2.drawio  metr1.cpp
MCiCvIT/Lab2/: SLOC:CLOC.docx  Table.xlsx
MCiCvIT/Lab3/: CMakeLists.txt  LW4.docx  var_3.cpp
MCiCvIT/Lab3/labs/: LW4.docx  Table.xlsx
MCiCvIT/Lab7/: МетрикаСпена+Чепина.docx
MCiCvIT/Lab8/: Lab8.docx
MCiCvIT/lab5/: pz6.docx  Маккейб.docx
MCiCvIT/lab6/: pz6.docx
MaOsIs/Lab 3/: bun.gwf  filling.gwf
MaOsIs/Lab 4/kb_bakery/: bakery_subject_domain.scs  etc.scs  fillings.scs  section_bakery.scs  section_bakery_type.scs
MaOsIs/Lab 4/patterns/: pattern_list.scs  patterns.gwf
MaOsIs/Lab1/: Lab_1.scs  lab1.gwf
MaOsIs/Lab2/: lab2.scs
OS/Lab2/: CMakeLists.txt  main.c
OS/Lab2/10/: CMakeLists.txt  main.c
OS/Lab3/: CMakeLists.txt  main.cpp
OS/Lab4/: CMakeLists.txt  Memory.h  OS_LW_4.docx  main.cpp  tests.cpp
OS/Lab4/test/: info
OTIS/Lab1/: 4 Структурная схема.docx  ОТИС.gwf  Отис.docx
OTIS/Lab2/: Lab2.docx
OTIS/Lab3/: Lab3.docx
OTIS/lab4/: Lab4.docx  map.gwf
PPOIS/Lab1/: .gitignore  CMakeLists.txt  input.txt
PPOIS/Lab1/Doc/: Doxyfile
PPOIS/Lab1/inc/: cube.h
PPOIS/Lab1/src/: cube.cpp  main.cpp
PPOIS/Lab1/test/: CMakeLists.txt  test.cpp
PPOIS/Lab2/: CMakeLists.txt  clients.txt  date.txt  letters.txt  parcels.txt  postmans.txt
PPOIS/Lab2/html/: class_customer-members.html  class_customer.html  class_delivery_address.html  class_deliveryman-members.html  class_deliveryman.html  class_letter-members.html  class_letter.html  class_package.html  class_parcel-members.html  class_parcel.html  class_person.html  class_post_man-members.html  classes.html  (+9 more)
PPOIS/Lab2/test/: CMakeLists.txt  test.cpp
PPOIS/Lab3/: .gitignore  pom.xml
PPOIS/Lab4/: .gitignore  CMakeLists.txt
(+216 files in other folders)
